# game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/drawing/: Drawing.cpp  Drawing.h
src/entities/: Grid.cpp  Grid.h
src/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/logging/: Logger.cpp  Logger.h
